--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+  
         <div class = navbar>
             <img src="assets/Netflix-Logo.wine.svg" id = "logo">
             <nav>
@@ -26,8 +26,7 @@
                 </ul>
            </nav>
         </div>
-    </header>
-<section class ="background"> 
+<header class ="background"> 
     <div class="content">
         <div>
         <h1>Unlimited movies, TV<br> shows and more.</h1>
@@ -39,7 +38,7 @@
         </form>
         </div>
     </div>
-   </section>
+</header>
    <section>
     <div class="contanier">
         <div class="grid1">
@@ -53,9 +52,9 @@
               </video>
         </div>
     </div>
-<section>
+   <section>
     <div class="contanier1">
-        <div class="grid11">
+        <div class="grid132">
             <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/mobile-0819.jpg">
             <div class="card">
                 <img src="assets/3.png">
@@ -67,7 +66,7 @@
                 <img src="assets/4.gif">
             </div>
         </div>
-        <div class="grid12">
+        <div class="grid123">
            <h1>Download your shows to watch offline.</h1>
            <h3>Save your favourites easily and always have something to watch.</h3>
         </div>
@@ -79,9 +78,9 @@
            <h1>Watch everywhere.</h1>
            <h3>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</h3>
         </div>
-        <div class="grid2">
+        <div class="grid23">
             <img src="assets/5.png">
-            <video loop autoplay muted style="width: 50%; margin-top: 5%; margin-left: 16%;">
+            <video loop autoplay muted>
                 <source src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-devices-in.m4v" type="video/mp4">
               </video>
         </div>
