--- a/index.html
+++ b/index.html
@@ -11,22 +11,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
-        <div class = navbar>
-            <img src="assets/Netflix-Logo.wine.svg" id = "logo">
-            <nav>
-                <ul>
-                    <li><label></label>
-                        <select>
-                            <option><img src="assets/7.png">English</option>
-                            <option>हिन्दी</option>                        
-                        </select>
-                    </li>
-                    <li><span style="padding: 5px 16px 5px 16px; background-color: red; border-radius: 2px;">Sign in</span></li>
-                </ul>
-           </nav>
-        </div>
 <header class ="background"> 
+    <div class = navbar>
+        <img src="assets/Netflix-Logo.wine.svg" id = "logo">
+        <nav>
+            <ul>
+                <li><label></label>
+                    <select>
+                        <option>English</option>
+                        <option>हिन्दी</option>                        
+                    </select>
+                </li>
+                <li><a href=" ">Sign in</a></span></li>
+            </ul>
+       </nav>
+    </div>
     <div class="content">
         <div>
         <h1>Unlimited movies, TV<br> shows and more.</h1>
